            requiresAuth was false (during authenticated session)
14-02-06    SQL errors, if existent, correctly returned in articles
09-02-06    Fixed inability to change an article's category (Jayesh Sheth)
03-02-06    Checks for session timeout improved (Andrey Podshivalov)
31-01-06    Fixed error that occurs when empty array passed to implodeWithKeys()
            (sirphp)

IMPROVEMENTS
25-02-06    Added 'hits' field to item table to track item hits
25-02-06    Renamed PageMgr to SectionMgr, and all references to 'page' changed
            to section
21-02-06    Improvements to html controls (Olivier Burgard)
21-02-06    Module generator refactored and now auto-registers new modules
            (Gerald Fischer)
20-02-06    Moved all blocks within their respective modules, those without strong
            ties allocated to 'default' module
20-02-06    Moved all default templates within modules
17-02-06    Factored out module builder code into its own manager, ModuleGenerationMgr
17-02-06    CLI installer added, see seagull/var/demoRebuild.php
17-02-06    Added ability to edit modules' config files through GUI
            (Eric Persson)
16-02-06    Moved session options to their own config group
16-02-06    All config keys now follow consistent bumpyCap naming standard
15-02-06    Recover password and change password functionality broken down into
            separate managers
14-02-06    Timezone support from installer correctly implemented
14-02-06    All action methods are now prefixed with '_cmd' to differentiate
            them from private methods
14-02-06    SGL_UrlParser_SefStrategy::resolveArrayElems renamed to
            SGL_Url::querystringArrayToHash, moved up inheritance hierarchy so it
            can be shared
14-02-06    Updated to latest jscalendar
13-02-06    Swedish translation updated (Peter Palotas)
13-02-06    Moved test.conf.ini to more secure location
09-02-06    Ban IP, Allow and Deny list can now be processed (Tomasz Osmialowski)