@@ -10,10 +10,7 @@
     <meta name="rating" content="General" />
     <meta name="generator" content="Seagull Framework" />
     <link rel="help" href="http://trac.seagullproject.org" title="Seagull Documentation." />
-
-    <style type="text/css" media="screen">
-        @import url("{webRoot}/themes/{theme}/css/style.php?navStylesheet={conf[navigation][stylesheet]}&amp;moduleName={moduleName}");
-    </style>
+    <link rel="stylesheet" type="text/css" media="screen" href="{webRoot}/themes/{theme}/css/style.php?navStylesheet={conf[navigation][stylesheet]}&amp;moduleName={moduleName}" />
 
     {scriptOpen:h}
         var SGL_JS_WEBROOT="{webRoot}";
