@@ -4,7 +4,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-15">
     <title>Flesch</title>
-    <LINK rel="stylesheet" type="text/css" href="themes/default/css/style.php?navStylesheet=SglDefault_TwoLevel&moduleName=default">
+    <link rel="stylesheet" type="text/css" media="screen" href="themes/default/css/style.php?navStylesheet=SglDefault_TwoLevel&amp;moduleName=default">
 </head>
 
 <body>
