@@ -3,7 +3,7 @@
 <html>
 <head>
     <title>Flesch</title>
-    <LINK rel="stylesheet" type="text/css" href="themes/default/css/style.php?navStylesheet=SglDefault_TwoLevel&moduleName=default">
+    <link rel="stylesheet" type="text/css" media="screen" href="themes/default/css/style.php?navStylesheet=SglDefault_TwoLevel&amp;moduleName=default">
 </head>
 
 <body>
